# image_classification

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  tox.ini
.github/: dependabot.yml  issue-branch.yml
.github/workflows/: tests.yaml
config/: cifar10_config.yaml  mnist_config.yaml
image_classification/: __init__.py  data.py  datasets.py  imageclsmodule.py  loggers.py  losses.py  metrics.py  network.py  trainer.py  transforms.py  util.py  utils.py  visualization.py
image_classification/configs/: common.yaml  config.yaml
image_classification/configs/experiment/: cifar10.yaml  fish.yaml  mnist.yaml
image_classification/configs/hp_search/: cifar10_optuna.yaml  mnist_optuna.yaml
image_classification/configs/training_logger/: neptune.yaml  tensorboard.yaml
image_classification/data/: colorisation.py  fish.py  mnist.py  wrapper.py
image_classification/loss/: focal_loss.py
image_classification/losses/: __init__.py  focal_loss.py
image_classification/models/: __init__.py  model_wrapper.py
image_classification/tests/: test_colorisation.py  test_colorisationwrapper.py  test_losses.py
image_classification/transforms/: __init__.py  identity.py  scheduler.py
image_classification/visualization/: __init__.py  visualization.py
tests/: test_colorisation.py  test_losses.py
