[tool.poetry]
name = "image_classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
torch = "^1.9.0"
torchvision = "^0.10.0"
pydantic = "^1.8.2"
pytorch-lightning = "^1.4.4"
onnx = "^1.10.1"
Bottleneck = "^1.3.2"
"ruamel.yaml" = "^0.17.13"
loguru = "^0.5.3"
torchmetrics = "^0.5.1"
mlflow = "^1.20.1"
albumentations = "^1.0.3"
tensorboard = "^2.6.0"
torch-tb-profiler = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
