[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Tord Kriznik Sørensen"]
description = ""
name = "image_classification"
version = "0.1.0"

[tool.poetry.dependencies]
adabelief-pytorch = "~0.2.1"
click = "^8.1.3"
fastcore = "^1.5.22"
hydra-core = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
lightning-bolts = "~0.5.0"
loguru = "~0.6.0"
matplotlib = "^3.4.3"
neptune-client = "~0.14.3"
onnx = "^1.12.0"
# NOTE: new version of protobuf broke torch, onnx etc. Keep a temporary lock on
# this requirement for now.
protobuf = "3.20.1"
python = "~3.9"
pytorch-lightning = "^1.6"
rich = "^12.5.1"
"ruamel.yaml" = "^0.17.13"
scikit-learn = "^1.0.2"
tensorboard = "^2.8.0"
torch = "^1.11.0"
torch-tb-profiler = "~0.4.0"
torchmetrics = "~0.9.2"
torchvision = "^0.12.0"
einops = "^0.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.poetry.extras]
test = ["pytest", "tox", "tox-pyenv"]

[tool.poetry.scripts]
train = "image_classification.trainer:run"

[tool.black]
line-length = 80

[flake8]
ignore = "E203,E266,E501,W503,F403,F401" # For black compatibility
max-complexity = 18
max-line-length = 80
